--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -101,9 +101,19 @@ button:hover {
 }
 
 .control {
-  gap: 20px;
+  gap: 10px;
+  display: flex;
+  flex-direction: row;
 }
 
 .btn-control {
   padding: 0 10px 0 10px;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: flex;
 }
