--- a/src/App.css
+++ b/src/App.css
@@ -117,3 +117,11 @@ button:hover {
 .show {
   display: flex;
 }
+
+.clickable {
+  pointer-events: all;
+}
+
+.not-clickable {
+  pointer-events: none;
+}
